--- a/assets/css/separator.css
+++ b/assets/css/separator.css
@@ -1,6 +1,6 @@
 /*Blue Separator*/
 
-h3.st_services_circle {
+/*h3.st_services_circle {
     text-align: center;
     margin: 0 auto;
     max-width: 247px;
@@ -45,7 +45,7 @@ h3:after {
     position: absolute;
 }
 
-/*White Separator*/
+White Separator
 .st_showcase-inner > h1 + h4 {
     text-align: center;
     margin: 0 auto;
@@ -90,5 +90,8 @@ h4:after {
     border-radius: 8px;
     position: absolute;
 }
+
+
+*/
 
 
