--- a/assets/css/st_services.css
+++ b/assets/css/st_services.css
@@ -11,7 +11,7 @@ padding-top: 38px;
 font-size: 30px;
 color: #3d506f;
 font-weight: 400;
-font-family: 'latobold';
+font-family: 'latoregular';
 }
 
 .st_1 {
